--- a/package.json
+++ b/package.json
@@ -3,26 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "db:setup": "node src/scripts/setup-db.mjs",
+    "db:migrate": "node src/scripts/add-user-details.mjs",
+    "db:create-trips": "node src/scripts/create-trips-table.mjs"
   },
   "dependencies": {
-    "framer-motion": "^12.27.0",
-    "lucide-react": "^0.562.0",
-    "next": "^16.1.3",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^16.1.3",
+    "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
